2010-02-21  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (fancy-about-screen): In mode-line, apply
	mode-line-buffer-id face only to the buffer name (Bug#5613).

2010-02-20  Kevin Ryde  <user42@zip.com.au>

	* progmodes/compile.el (compilation-error-regexp-alist-alist): In
	`watcom' anchor regexp to start of line, to avoid slowness
	(Bug#5599).

2010-02-20  Eli Zaretskii  <eliz@gnu.org>

	* subr.el (remove-yank-excluded-properties): Explain in a comment
	why `category' property is removed.

2010-02-19  Chong Yidong  <cyd@stupidchicken.com>

	* isearch.el (isearch-update-post-hook, isearch-update): Revert
	2010-02-17 change.

2010-02-19  Ulf Jasper  <ulf.jasper@web.de>

	* calendar/icalendar.el (icalendar--convert-ordinary-to-ical)
	(icalendar--convert-weekly-to-ical)
	(icalendar--convert-yearly-to-ical)
	(icalendar--convert-block-to-ical)
	(icalendar--convert-cyclic-to-ical)
	(icalendar--convert-anniversary-to-ical): Take care of time
	specifications where hour has 1-digit only (Bug#5549).

2010-02-19  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-assembler-handler): Accommodate change
	of disassemble output in GDB 7.1.

2010-02-19  Glenn Morris  <rgm@gnu.org>

	* progmodes/f90.el (f90-electric-insert): Give it a delete-selection
	property.  (Bug#5593)

2010-02-18  Sam Steingold  <sds@gnu.org>

	* vc-cvs.el (vc-cvs-merge-news): Yet another fix of message parsing.

2010-02-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	Use abbreviated file names in bookmarks (bug#5591).
	* bookmark.el (bookmark-maybe-load-default-file): Remove redundant
	calls to expand-file-name.
	(bookmark-relocate): Use abbreviated file names in bookmarks.
	(bookmark-load): Use abbreviated file names in messages.

2010-02-18  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-directory-files): When FULL, do not
	expand "." and "..".  Reported by Thierry Volpiatto
	<thierry.volpiatto@gmail.com>.
